WIP fix letter spacing global style

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -375,10 +375,6 @@
   margin-top: 0.7rem;
 }
 
-.card-information .caption {
-  letter-spacing: 0.07rem;
-}
-
 .card-article-info {
   margin-top: 1rem;
 }
